--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   postgresdb:
     image: postgres:9.3
     ports:
-      - "5432:5432"
+      - "54321:5432"
     environment:
       - POSTGRES_PASSWORD=secret
 
@@ -20,11 +20,17 @@ services:
   inventory-tracker:
     build: 
       context: ./server
-    container_name: inventory-tracker-server
     volumes:
       - ./server:/go/src/github.com/divanvisagie/go-inventory-tracker
+
+  load-balancer:
+    image: dockercloud/haproxy
+    links:
+     - inventory-tracker
     ports:
-      - "8080:8080"
+     - "8080:80"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
   
   locust:
     build:
@@ -35,4 +41,4 @@ services:
       - "8089:8089"
 
     environment:
-      - ATTACKED_HOST=http://inventory-tracker:8080
+      - ATTACKED_HOST=http://load-balancer
