--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,14 @@ services:
     volumes:
       - ./server:/go/src/github.com/divanvisagie/go-inventory-tracker
 
+  docs:
+    build:
+      context: ./server
+      dockerfile: redoc.Dockerfile
+    ports:
+      - "8081:80"
+    
+
   load-balancer:
     image: dockercloud/haproxy
     links:
