--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ services:
   - docker
 
 script:
-  - cd server/cmd/inventory-tracker-server
-  - go get -v
-  - cd ../../..
-  - make build
+  - make dockerize
   - docker build -t divanvisagie/go-inventory-tracker:latest .
   - docker build -t divanvisagie/inventory-tracker-migrations:latest -f migrations.Dockerfile .
   
